--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port $PORT",        
+    "dev:win": "next dev --turbopack --port %PORT%",   
+    "dev:local": "next dev --turbopack",               
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",                    
+    "start:win": "next start -p %PORT%",               
     "lint": "next lint"
   },
   "dependencies": {
@@ -63,14 +66,15 @@
     "lucide-react": "^0.532.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
-    "next": "15.4.3",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "pixi.js": "^8.13.1",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.6",
     "sonner": "^2.0.7",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^3.3.1",
