--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack --port $PORT",        
-    "dev:win": "next dev --turbopack --port %PORT%",   
-    "dev:local": "next dev --turbopack",               
+    "dev": "next dev --turbopack --port $PORT",
+    "dev:win": "next dev --turbopack --port %PORT%",
+    "dev:local": "next dev --turbopack",
     "build": "next build",
-    "start": "next start -p $PORT",                    
-    "start:win": "next start -p %PORT%",               
+    "start": "next start -p $PORT",
+    "start:win": "next start -p %PORT%",
     "lint": "next lint"
   },
   "dependencies": {
@@ -58,10 +58,13 @@
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
     "groq-sdk": "^0.29.0",
     "jotai": "^2.14.0",
+    "jquery": "^3.7.1",
+    "jquery-mask-plugin": "^1.14.16",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.532.0",
     "motion": "^12.23.12",
@@ -76,6 +79,7 @@
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.6",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.25.0",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -84,6 +88,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jquery": "^3.5.33",
+    "@types/jquery-mask-plugin": "^1.14.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
