--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "start:win": "next start -p %PORT%",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test:all": "npm run test && npm run test:e2e",
+    "audit": "npm audit --audit-level moderate",
+    "audit:fix": "npm audit fix"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.1",
@@ -94,8 +102,15 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@tanstack/react-query": "^5.59.0",
+    "cypress": "^13.15.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2",
