feat: Clonagem Webflow pixel-perfect v1.0 - Estrutura base implementada
- ✅ CSS original do Webflow importado
- ✅ Estrutura HTML idêntica (w-container, w-row, w-col)
- ✅ Formulário Webflow funcional (wf-form-Home-Seguro-Auto)
- ✅ Header com contatos (SP, RJ, WhatsApp, Emergência)
- ✅ Hero section com preço destacado (R$ 79⁹⁰ MENSAIS)
- ✅ Seção de seguros (Auto, Caminhão, Uber, Motos)
- ✅ Footer completo (SUSEP, CNPJ, endereço)
- ✅ Layout responsivo do Webflow
- ✅ Formulário com validação React

Próximos passos:
- 🎯 Refinamento visual pixel-perfect
- 🎯 Animações e interações
- 🎯 Validações específicas do Webflow
- 🎯 Integração com APIs reais

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack --port $PORT",
+    "dev": "next dev --turbopack --port 3001",
     "dev:win": "next dev --turbopack --port %PORT%",
     "dev:local": "next dev --turbopack",
     "build": "next build",
